--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,12 +1,11 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/Maps/Minimal_Default.Minimal_Default
+GameDefaultMap=/Game/Maps/Minimal_Default.Minimal_Default
+GlobalDefaultGameMode=/Game/BP_LeapMotionGameMode.BP_LeapMotionGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
-
